--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Week 4 Review</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+	<section>
+	
+	</section>
+	<section>
+		
+	</section>
+</body>
+</html>
