I put something in my section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 	<section>
-	
+		<h2>This is Sandra's part</h2>
+		<p>I think we can do this I honestly don't know what to type in this.</p>
 	</section>
 	<section>
 		
